# puzzle_builder

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  scripts.sh
bot/: config.py  states.py
bot/puzzles/: models.py  solver.py
scripts/: visualize_test.py
tests/: test_puzzle_solver.py
