[project]
name = "telegram-puzzle-bot"
version = "0.1.0"
description = "A Telegram bot that offers a solution to a puzzle."
authors = [
  { name = "Hoby", email = "hobyfrezk@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-telegram-bot",
  "python-dotenv>=1.0.1",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0"
]
[dependency-groups]
dev = [
  "black",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "B", "I"]
lint.ignore = ["E501"]
